# pENC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  classifier.py  dataset.lnk  inverse_wave.pyx  logic.py  mfcc_extractor.cpp  mfcc_extractor.pyx  mfcc_kernel.cl  setup.py  shortcut.py  visualization.py
Scripts/: Search.ps1
dataset/: Metadata.csv
